--- a/admin.html
+++ b/admin.html
@@ -271,12 +271,36 @@
                 <div class="fw-bold">Admin</div>
                 <button id="mobile-nav-close" class="btn btn-sm btn-light" aria-label="Close menu"><i class="bi bi-x"></i></button>
             </div>
-            <ul class="list-unstyled mt-3">
-                <li><a href="#" data-nav-target="stats" class="mobile-nav-link">📊 Dashboard</a></li>
-                <li><a href="#attendees" data-nav-target="attendees" class="mobile-nav-link">👥 Attendees</a></li>
-                <li><a href="#health" data-nav-target="health" class="mobile-nav-link">❤️ System Health</a></li>
-                <li><a href="/verify.html" class="mobile-nav-link">🔍 Check-In</a></li>
-                <li><button id="mobile-logout" class="btn btn-danger w-100 mt-3">Logout</button></li>
+            <ul class="mobile-nav-tree list-unstyled mt-3">
+                <li>
+                    <button class="mobile-nav-section-toggle btn btn-sm btn-light w-100 text-start" aria-expanded="false">
+                        <i class="bi bi-house-door-fill me-2"></i> Dashboard
+                    </button>
+                </li>
+                <li>
+                    <button class="mobile-nav-section-toggle btn btn-sm btn-light w-100 text-start" aria-expanded="false">
+                        <i class="bi bi-people-fill me-2"></i> Attendees
+                    </button>
+                    <ul class="mobile-sublist list-unstyled ms-3 mt-2 mb-2">
+                        <li><a href="#attendee-table-controls" data-nav-target="attendees" class="mobile-nav-link">Search / Manage</a></li>
+                        <li><a href="#edit-attendee-modal" class="mobile-nav-link" data-bs-toggle="modal">Quick Edit (modal)</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <button class="mobile-nav-section-toggle btn btn-sm btn-light w-100 text-start" aria-expanded="false">
+                        <i class="bi bi-heart-pulse-fill me-2"></i> System
+                    </button>
+                    <ul class="mobile-sublist list-unstyled ms-3 mt-2 mb-2">
+                        <li><a href="#system-health-list" data-nav-target="health" class="mobile-nav-link">Health</a></li>
+                        <li><a href="#" class="mobile-nav-link" id="mobile-system-controls-link">Controls</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="/verify.html" class="mobile-nav-link">🔍 Go to Check-In</a>
+                </li>
+                <li class="mt-3">
+                    <button id="mobile-logout" class="btn btn-danger w-100">Logout</button>
+                </li>
             </ul>
         </div>
     </nav>
