--- a/index.html
+++ b/index.html
@@ -28,23 +28,40 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
         :root {
+            --app-bg: #f3f4ff;
+            --app-text: #0f172a;
+            --card-glass: rgba(255, 255, 255, 0.92);
+            --accent-primary: #0f1f78;
+            --accent-secondary: #2563eb;
+            --pass-bg-top: #02104d;
+            --pass-bg-bottom: #051b7a;
+            --pass-body-top: #ffffff;
+            --pass-body-bottom: #eef2ff;
+            --pass-divider: rgba(17, 37, 104, 0.18);
+            --pass-ink: #0f172a;
+            --pass-label: #142966;
             font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            color: #0f172a;
-            background-color: #f3f4ff;
+            color: var(--app-text);
+            background-color: var(--app-bg);
         }
 
         body {
             min-height: 100vh;
-            background: radial-gradient(circle at top, #dbeafe 0%, rgba(255, 255, 255, 0) 60%),
-                linear-gradient(160deg, #eff6ff 0%, #f8f9ff 100%);
+            background:
+                radial-gradient(120% 120% at 18% 0%, rgba(79, 116, 255, 0.35) 0%, rgba(255, 255, 255, 0) 55%),
+                radial-gradient(85% 95% at 82% 12%, rgba(167, 198, 255, 0.28) 0%, rgba(255, 255, 255, 0) 60%),
+                linear-gradient(160deg, #eff3ff 0%, #f9fbff 100%);
         }
 
         .app-card {
-            border: none;
+            border: 1px solid rgba(148, 163, 184, 0.16);
             border-radius: 28px;
-            box-shadow: 0 25px 60px rgba(15, 23, 42, 0.12);
-            background: rgba(255, 255, 255, 0.92);
-            backdrop-filter: blur(8px);
+            box-shadow: 0 24px 60px rgba(15, 23, 42, 0.12);
+            background: var(--card-glass);
+            backdrop-filter: blur(10px);
+            display: flex;
+            flex-direction: column;
+            height: 100%;
         }
 
         .app-card .card-header {
@@ -54,6 +71,10 @@
         }
 
         .app-card .card-body {
+            flex: 1 1 auto;
+            display: flex;
+            flex-direction: column;
+            gap: clamp(20px, 3vw, 32px);
             padding: clamp(24px, 4vw, 40px);
         }
 
@@ -70,14 +91,19 @@
         }
 
         .app-main {
-            max-width: 1060px;
+            max-width: 1180px;
             margin: 0 auto;
+            padding: clamp(12px, 4vw, 24px) 0;
         }
 
         .card-heading {
             display: flex;
             flex-direction: column;
             gap: 0.35rem;
+        }
+
+        .card-heading.mb-4 {
+            margin-bottom: 0 !important;
         }
 
         .card-heading .eyebrow {
@@ -214,69 +240,77 @@
         }
 
         .pass-preview {
-            border-radius: 28px;
+            border-radius: 30px;
             box-shadow: 0 28px 60px rgba(15, 23, 42, 0.18);
             overflow: hidden;
-            background: radial-gradient(circle at top, rgba(43, 65, 197, 0.2), rgba(7, 23, 113, 0.08)), #06135a;
+            background:
+                radial-gradient(140% 120% at 24% 0%, rgba(96, 123, 255, 0.28) 0%, rgba(6, 18, 98, 0.12) 48%, rgba(6, 18, 98, 0.5) 100%),
+                linear-gradient(160deg, #07145d 0%, #020b3a 100%);
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 20px;
+            padding: clamp(16px, 4vw, 28px);
         }
 
         .pass-card {
-            width: clamp(240px, 54vw, 340px);
+            width: clamp(248px, 52vw, 360px);
             aspect-ratio: 7 / 11;
-            border-radius: 28px;
-            background: #03104b;
+            border-radius: 32px;
+            background: linear-gradient(180deg, var(--pass-bg-top) 0%, var(--pass-bg-bottom) 100%);
             color: #ffffff;
             display: flex;
             flex-direction: column;
             position: relative;
             overflow: hidden;
             font-family: 'Inter', sans-serif;
+            box-shadow: 0 26px 54px rgba(5, 17, 82, 0.28);
         }
 
         .pass-card__lanyard-slot {
             position: absolute;
-            inset: 18px 0 auto 0;
+            inset: 22px 0 auto 0;
             width: 100%;
             display: flex;
             justify-content: center;
+            pointer-events: none;
         }
 
         .pass-card__lanyard-slot::before {
             content: '';
-            width: 180px;
+            width: clamp(150px, 68%, 198px);
             height: 18px;
             border-radius: 999px;
-            background: linear-gradient(90deg, rgba(255, 255, 255, 0.22), rgba(255, 255, 255, 0.46), rgba(255, 255, 255, 0.22));
+            background: linear-gradient(90deg, rgba(255, 255, 255, 0.24), rgba(255, 255, 255, 0.58), rgba(255, 255, 255, 0.24));
+            filter: drop-shadow(0 14px 18px rgba(3, 10, 60, 0.28));
         }
 
         .pass-card__header {
-            padding: 70px 24px 24px;
+            padding: 78px 24px 28px;
             text-align: center;
-            letter-spacing: 0.18em;
+            letter-spacing: 0.28em;
             font-weight: 900;
-            font-size: clamp(2rem, 5.2vw, 2.6rem);
+            font-size: clamp(2.1rem, 5.4vw, 2.8rem);
+            text-transform: uppercase;
         }
 
         .pass-card__body {
             flex: 1;
-            background: linear-gradient(180deg, #ffffff 0%, #f4f6ff 100%);
-            color: #0f172a;
-            border-top-left-radius: 26px;
-            border-top-right-radius: 26px;
-            padding: 30px 24px 24px;
+            background: linear-gradient(180deg, var(--pass-body-top) 0%, var(--pass-body-bottom) 100%);
+            color: var(--pass-ink);
+            border-top-left-radius: 30px;
+            border-top-right-radius: 30px;
+            padding: clamp(26px, 4vw, 32px) clamp(22px, 4vw, 28px) clamp(24px, 4vw, 28px);
             display: flex;
             flex-direction: column;
-            gap: 24px;
+            gap: clamp(22px, 3.2vw, 30px);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
         }
 
         .pass-card__grid {
             display: grid;
-            grid-template-columns: 1fr;
-            gap: 22px;
+            grid-template-columns: minmax(0, 1fr) 16px minmax(0, 1fr);
+            align-items: center;
+            gap: clamp(18px, 4vw, 26px);
         }
 
         .pass-card__photo {
@@ -287,15 +321,16 @@
         }
 
         .pass-card__photo figure {
-            width: 140px;
-            height: 140px;
+            width: clamp(112px, 34vw, 128px);
+            height: clamp(112px, 34vw, 128px);
             border-radius: 999px;
-            border: 5px solid #0c238e;
+            border: 4px solid rgba(9, 24, 104, 0.95);
             overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #7aa6ff, #1b48d2);
+            background: linear-gradient(135deg, #87b4ff 0%, #1b48d2 100%);
+            box-shadow: inset 0 0 0 6px rgba(255, 255, 255, 0.2), 0 16px 28px rgba(18, 35, 124, 0.22);
         }
 
         .pass-card__photo img {
@@ -307,32 +342,37 @@
         .pass-card__info {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 8px;
         }
 
         .pass-card__info-label {
-            font-size: 0.95rem;
+            font-size: 0.88rem;
             font-weight: 700;
-            letter-spacing: 0.1em;
+            letter-spacing: 0.16em;
             text-transform: uppercase;
-            color: #12255d;
+            color: var(--pass-label);
         }
 
         .pass-card__info-value {
-            font-size: 1.1rem;
+            font-size: 1.12rem;
             font-weight: 800;
             color: #d0253d;
-            letter-spacing: 0.06em;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
+            line-height: 1.2;
+            word-break: break-word;
+            font-variant-numeric: tabular-nums;
         }
 
         .pass-card__info-value.name {
-            color: #0f172a;
+            color: var(--pass-ink);
         }
 
         .pass-card__divider {
             height: 100%;
             width: 2px;
-            background-image: repeating-linear-gradient(to bottom, rgba(7, 23, 113, 0.28) 0, rgba(7, 23, 113, 0.28) 8px, transparent 8px, transparent 16px);
+            background-image: repeating-linear-gradient(to bottom, var(--pass-divider) 0, var(--pass-divider) 8px, transparent 8px, transparent 16px);
+            border-radius: 999px;
             margin: 0 auto;
         }
 
@@ -342,76 +382,119 @@
         }
 
         .pass-card__qr figure {
-            width: 140px;
+            width: clamp(118px, 35vw, 132px);
             border-radius: 16px;
             background: #ffffff;
-            border: 3px solid rgba(4, 23, 113, 0.18);
+            border: 2px solid rgba(4, 23, 113, 0.22);
             padding: 12px;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: inset 0 0 0 1px rgba(4, 23, 113, 0.08);
+            box-shadow: 0 14px 34px rgba(17, 37, 104, 0.2), inset 0 0 0 1px rgba(4, 23, 113, 0.08);
         }
 
         .pass-card__qr img {
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: contain;
         }
 
         .pass-card__footer {
             margin-top: auto;
-            padding: 20px 18px 24px;
+            padding: 18px 20px 22px;
             text-align: center;
-            background: #03104b;
+            background: linear-gradient(170deg, rgba(3, 16, 75, 0.95), rgba(3, 11, 55, 0.9));
             color: #ffffff;
-            border-bottom-left-radius: 26px;
-            border-bottom-right-radius: 26px;
+            border-bottom-left-radius: 32px;
+            border-bottom-right-radius: 32px;
+            border-top: 1px solid rgba(255, 255, 255, 0.08);
         }
 
         .pass-card__footer-quote {
-            font-size: 0.88rem;
-            letter-spacing: 0.08em;
+            font-size: 0.82rem;
+            letter-spacing: 0.16em;
             text-transform: uppercase;
-            color: #d4dcff;
+            color: rgba(212, 220, 255, 0.78);
         }
 
         .pass-card__meta {
             display: grid;
             grid-template-columns: repeat(2, minmax(0, 1fr));
-            gap: 18px;
-            align-items: stretch;
+            gap: 14px 22px;
+            align-items: flex-start;
         }
 
         .pass-card__meta .pass-card__info {
-            gap: 8px;
+            gap: 6px;
         }
 
         .pass-card__meta .pass-card__info-label {
-            font-size: 0.9rem;
+            font-size: 0.86rem;
+            letter-spacing: 0.14em;
         }
 
         .pass-card__meta .pass-card__info-value {
-            font-size: 1.05rem;
+            font-size: 1.06rem;
         }
 
         .pass-card__meta-note {
             text-align: center;
-            font-size: 0.85rem;
-            color: rgba(15, 23, 42, 0.7);
-            letter-spacing: 0.08em;
+            font-size: 0.82rem;
+            color: rgba(15, 23, 42, 0.72);
+            letter-spacing: 0.12em;
             text-transform: uppercase;
-            font-weight: 600;
+            font-weight: 650;
+            line-height: 1.3;
         }
 
-        @media (min-width: 420px) {
+        @media (max-width: 420px) {
+            .pass-card {
+                width: min(82vw, 320px);
+            }
+
+            .pass-card__body {
+                padding: 24px 20px 22px;
+                gap: 20px;
+            }
+
             .pass-card__grid {
-                grid-template-columns: minmax(0, 1fr) 10px minmax(0, 1fr);
+                grid-template-columns: minmax(0, 1fr);
+            }
+
+            .pass-card__divider {
+                display: none;
+            }
+
+            .pass-card__photo figure,
+            .pass-card__qr figure {
+                width: 110px;
+                height: 110px;
+            }
+
+            .pass-card__meta {
+                grid-template-columns: 1fr;
+                text-align: center;
+            }
+
+            .pass-card__meta .pass-card__info {
                 align-items: center;
             }
         }
 
+        @media (min-width: 420px) {
+            .pass-card__grid {
+                grid-template-columns: minmax(0, 1fr) 18px minmax(0, 1fr);
+            }
+        }
+
+        @media (min-width: 992px) {
+            .pass-card {
+                width: 360px;
+            }
+        }
+
         .btn-primary {
-            background: linear-gradient(135deg, #0f1f78, #061262);
+            background: linear-gradient(135deg, var(--accent-primary), #061262);
             border: none;
             border-radius: 18px;
             font-weight: 700;
@@ -428,8 +511,8 @@
 
         .btn-outline-primary {
             border-radius: 18px;
-            border: 2px solid #0f1f78;
-            color: #0f1f78;
+            border: 2px solid var(--accent-primary);
+            color: var(--accent-primary);
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.05em;
@@ -439,7 +522,7 @@
         .btn-outline-primary:hover,
         .btn-outline-primary:focus {
             background: rgba(15, 31, 120, 0.12);
-            color: #0f1f78;
+            color: var(--accent-primary);
         }
 
         .btn-link.nav-btn,
@@ -533,17 +616,21 @@
             display: flex;
             align-items: center;
             gap: 0.75rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0;
+        }
+
+        .card-nav.mb-3 {
+            margin-bottom: 0 !important;
         }
 
         .card-nav .nav-btn {
             padding: 0;
-            color: #1d4ed8;
+            color: var(--accent-secondary);
             font-weight: 600;
         }
 
         .card-nav .nav-btn:hover {
-            color: #1d4ed8;
+            color: var(--accent-secondary);
             opacity: 0.85;
         }
 
@@ -552,12 +639,12 @@
         }
 
         .alternate-action {
-            color: #1d4ed8;
+            color: var(--accent-secondary);
             font-weight: 600;
         }
 
         .alternate-action:hover {
-            color: #1d4ed8;
+            color: var(--accent-secondary);
             opacity: 0.85;
         }
 
@@ -587,7 +674,7 @@
             }
 
             .card-nav {
-                margin-bottom: 0.5rem;
+                margin-bottom: 0;
             }
 
             .avatar-wrapper {
@@ -1088,10 +1175,10 @@
                                 <span class="pass-card__info-value name">${(fullName || '').toUpperCase()}</span>
                             </div>
                         </div>
-                        <div class="pass-card__meta-note">Present with a valid photo ID · Scan QR at entry</div>
+                        <div class="pass-card__meta-note">PRESENT WITH A VALID PHOTO ID · SCAN QR AT ENTRY</div>
                     </div>
                     <footer class="pass-card__footer">
-                        <div class="pass-card__footer-quote">Access opens between 09:00 and 18:00 · Arrive inspired</div>
+                        <div class="pass-card__footer-quote">ACCESS OPENS 09:00-18:00 · ARRIVE INSPIRED</div>
                     </footer>
                 `;
                 return card;
